# tli_companion

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
%USERPROFILE%/.tauri/: tli-companion.key  tli-companion.key.pub
.github/workflows/: release.yml
docs/: EULA_ANALYSIS.md  LOG_PARSING_RESEARCH.md
src/: App.css  App.tsx  Overlay.css  Overlay.tsx  itemsData.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  file_watcher.rs  lib.rs  log_parser.rs  main.rs  persistence.rs  state.rs  supabase_defaults.rs  supabase_sync.rs  types.rs
src-tauri/tests/: test_logs.txt
